Add info about IMO students at DS bac

--- a/avalur_cv_en_one_page.tex
+++ b/avalur_cv_en_one_page.tex
@@ -7,7 +7,11 @@
 \usepackage[margin=0.5in]{geometry}
 \pagestyle{empty} % нумерация выкл.
 \addtolength{\textheight}{1.75in}
-\usepackage{hyperref}
+\usepackage[colorlinks = true,
+            linkcolor = blue,
+            urlcolor  = blue,
+            citecolor = blue,
+            anchorcolor = blue]{hyperref}
 \usepackage{longtable}
 \usepackage{color}
 \usepackage{setspace}
@@ -32,7 +36,7 @@ $\bullet$~+7 913 718 53 78
 \hrule
 \vspace{0.5em}
 
-Project Manager and Data Scientist with 7+ years of experience in data science, analysis, and educational programs for the IT industry.
+Project Manager, Teacher and Data Scientist with 7+ years of experience in data science, analysis, and educational programs for the IT industry.
 
 \vspace{0.5em}
 \noindent {\textbf{Work experience}}
@@ -40,25 +44,26 @@ Project Manager and Data Scientist with 7+ years of experience in data science, 
  \item 2019 — present:
  Associate Professor and Head of the educational program in <<Data Science>>,  \textbf{\href{https://spbu.ru}{Saint Petersburg State University}, Department of Mathematics and Computer Science}
  \begin{itemize}
-	 \item Launched new educational program \href{https://maad.compscicenter.ru}{<<Data Science>>} in 2019, which immediately became popular among the best applicants in Russia
-	 \item Created from scratch \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant) in 2020
+	 \item Launched new educational program \href{https://maad.compscicenter.ru}{<<Data Science>>} in 2019, which immediately became popular among the best applicants in Russia, include winners of the International Olympiad in Mathematics (IMO)
 	 \item Created and teach \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course} with modern ML approaches. The average student's evaluation of teaching is 4,78 out of 5,0
+	 \item Developed with the group of students Python package for automatization of ML homeworks \href{https://github.com/avalur/mlpractice}{mlpractice}
+	 \item Created from scratch \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant) in 2020
  \end{itemize}
 
-  \item 2015 — 2018:
-	Data Scientist, \textbf{\href{https://yandex.ru/}{Yandex} }
-	\begin{itemize}
-		\item Increased the accuracy of the organizations database twice by 2\% and 3\% (the main goal of the team)
-		\item Automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}
-		\item Worked in a group of six data scientists. We developed soft in Java, SQL, Python, a little bit of C++
-	\end{itemize}
-
   \item 2013 — present:
-	Academic Programs Manager, \textbf{\href{https://compscicenter.ru}{Yandex, CS center/Yandex Data School}}
+	Academic Programs Manager, \textbf{\href{https://yandexdataschool.ru}{Yandex, Yandex Data School}}
 	\begin{itemize}
 		\item Launched a branch of \href{https://yandexdataschool.ru}{Yandex Data School} in Novosibirsk in 2013
 		\item Expanded the Yandex Data School branch in cooperation with JetBrains to \href{https://compscicenter.ru}{Computer science center} in 2017
 		\item Organized open \href{https://habr.com/ru/company/JetBrains-education/blog/458042/}{Machine Learning training sessions} for Kaggle competition participants in 2019
+	\end{itemize}
+
+  \item 2015 — 2018:
+	Data Scientist, \textbf{\href{https://yandex.ru/}{Yandex}}
+	\begin{itemize}
+		\item Increased the accuracy of the organizations database twice by 2\% and 3\% (the main goal of the team)
+		\item Automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}
+		\item Worked in a group of six data scientists. We developed soft in Java, SQL, Python, a little bit of C++
 	\end{itemize}
 
   \item 2009 — 2015:
