Actualize one-page cv

--- a/avalur_cv_en_one_page.tex
+++ b/avalur_cv_en_one_page.tex
@@ -41,17 +41,24 @@ Project Manager, Teacher and Data Scientist with 7+ years of experience in data 
 \vspace{0.5em}
 \noindent {\textbf{Work experience}}
 \begin{itemize}
+	\item 2022 — present:
+	Head of ML programs, \textbf{\href{https://yandex.ru}{Yandex}}
+	\begin{itemize}
+		\item Organized one-year Machine Learning with modern approaches for 350+ participants in 2022-23
+		\item Enrolled 100+ talented students in three partner master's programs of Yandex 
+	\end{itemize}
+
  \item 2019 — present:
  Associate Professor and Head of the educational program in <<Data Science>>,  \textbf{\href{https://spbu.ru}{Saint Petersburg State University}, Department of Mathematics and Computer Science}
  \begin{itemize}
 	 \item Launched new educational program \href{https://maad.compscicenter.ru}{<<Data Science>>} in 2019, which immediately became popular among the best applicants in Russia, include winners of the International Olympiad in Mathematics (IMO)
-	 \item Created and teach \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course} with modern ML approaches. The average student's evaluation of teaching is 4,78 out of 5,0
+	 \item Created and teach \href{https://github.com/spbu-math-cs/ml-course/}{one-year machine learning course} with modern ML approaches. The average student's evaluation of teaching is 4,78 out of 5,0
 	 \item Developed with the group of students Python package for automatization of ML homeworks \href{https://github.com/avalur/mlpractice}{mlpractice}
 	 \item Created from scratch \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant) in 2020
  \end{itemize}
 
-  \item 2013 — present:
-	Academic Programs Manager, \textbf{\href{https://yandexdataschool.ru}{Yandex, Yandex Data School}}
+  \item 2013 — 2022:
+	Academic Programs Manager, \textbf{\href{https://yandexdataschool.ru}{Yandex Data School}}
 	\begin{itemize}
 		\item Launched a branch of \href{https://yandexdataschool.ru}{Yandex Data School} in Novosibirsk in 2013
 		\item Expanded the Yandex Data School branch in cooperation with JetBrains to \href{https://compscicenter.ru}{Computer science center} in 2017
@@ -117,8 +124,8 @@ University of Washington & \href{https://coursera.org/share/3e187e640ed6df57b0a8
 How to Win a Data Science Competition & HSE University & \href{https://coursera.org/share/0ad3f02a08a405800c29d5909caece90}{ Coursera certificate } & 2019 \vspace{0.5em}\\
 \end{longtable}
 
-\noindent{\textbf{Out of work}}
+% \noindent{\textbf{Out of work}}
 
-I like to spend time with my wife and two daughters.
+% I like to spend time with my wife and two daughters.
 
 \end{document}
