--- a/avalur_cv_one_page.tex
+++ b/avalur_cv_one_page.tex
@@ -31,41 +31,47 @@
 \hrule
 \vspace{0.5em}
 
-Руководитель проектов и аналитик с более чем 7-летним опытом работы в области машинного обучения и образовательных программ для ИТ-индустрии.
+Руководитель проектов, преподаватель и аналитик с более чем 7-летним опытом работы в области машинного обучения и образовательных программ для ИТ-индустрии.
 
 \vspace{0.5em}
 \noindent {\textbf{Опыт работы}}
 \begin{itemize}
-\item 2019 — н.в.: доцент и руководитель программы по анализу данных, \textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, Факультет математики и компьютерных наук}
+	\item 2022 — н.в.:
+	Руководитель ML-программ, \textbf{\href{https://yandex.ru}{Яндекс}}
+	\begin{itemize}
+		\item Организовал годовой курс машинного обучения на 350+ студентов в 2022-23 гг.
+		\item Набрал 100+ талантливых студентов на три партнёрские магистратуры Яндекса
+	\end{itemize}
 
-\begin{itemize}
-	\item Запустил образовательную программу бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>} в 2019, сразу ставшую популярной среди лучших абитуриентов России
-	\item Создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ} в 2020
-	\item Разработал и читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс машинного обучения} по современным подходам в машинном обучении. Средняя студенческая оценка преподавания — 4,78 из 5,0
-	\item Организую ежегодную \href{https://sochisirius.ru/obuchenie/nauka/smena1078/5204}{смену в Сириусе} по математике и компьютерным наукам
-\end{itemize}
+	\item 2019 — н.в.: доцент и руководитель программы по анализу данных, \textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, Факультет математики и компьютерных наук}
 
-\item 2013 — н.в.: куратор академических программ, \textbf{\href{https://compscicenter.ru}{Яндекс, CS center/Школа анализа данных}}
-\begin{itemize}
-	\item запустил филиал ШАД в Новосибирске в 2013
-	\item в сотрудничестве с компанией Jetbrains расширил филиал ШАД до отделения \href{https://compscicenter.ru}{Computer science center} в 2017
-	\item организовал \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивный проектный практикум для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>} в 2019
-\end{itemize}
+	\begin{itemize}
+		\item Запустил образовательную программу бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>} в 2019, сразу ставшую популярной среди лучших абитуриентов России
+		\item Создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ} в 2020
+		\item Разработал и читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс машинного обучения} по современным подходам в машинном обучении. Средняя студенческая оценка преподавания — 4,78 из 5,0
+		\item Организую ежегодную \href{https://sochisirius.ru/obuchenie/nauka/smena1078/5204}{смену в Сириусе} по математике и компьютерным наукам
+	\end{itemize}
 
+	\item 2013 — н.в.: куратор академических программ, \textbf{\href{https://compscicenter.ru}{Яндекс, CS center/Школа анализа данных}}
+	\begin{itemize}
+		\item запустил филиал ШАД в Новосибирске в 2013
+		\item в сотрудничестве с компанией Jetbrains расширил филиал ШАД до отделения \href{https://compscicenter.ru}{Computer science center} в 2017
+		\item организовал \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивный проектный практикум для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>} в 2019
+	\end{itemize}
 
-\item 2015 — 2018: аналитик-разработчик (data scientist), \textbf{\href{https://yandex.ru/}{Яндекс}}
-\begin{itemize}
-	\item Дважды повысил точность организаций Справочника на 2\% и 3\% (главная цель команды)
-	\item Автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в Толоке (краудсорс)
-	\item В команде из 6 человек применяли машинное обучение, писали на Java, SQL, Python, немного С++
-\end{itemize}
+	\item 2015 — 2018: аналитик-разработчик (data scientist), \textbf{\href{https://yandex.ru/}{Яндекс}}
+	\begin{itemize}
+		\item Дважды повысил точность организаций Справочника на 2\% и 3\% (главная цель команды)
+		\item Автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в Толоке (краудсорс)
+		\item В команде из 6 человек применяли машинное обучение, писали на Java, SQL, Python, немного С++
+	\end{itemize}
 
-\item 2009 — 2015: научный сотрудник, \textbf{\href{http://www.ict.nsc.ru}{Институт вычислительных технологий СО РАН}}
-\begin{itemize}
-	\item Разработал новую численную модель, учитывающую изменение во времени геометрии проточного тракта гидротурбины
-	\item Ускорил расчеты имеющимся в лаборатории комплексом программ на языке Fortran в 16 раз (MPI по блокам), и ещё в 7 раз (OpenMP-потоки внутри блока)
-	\item Защитил \href{https://github.com/avalur/dissertation/blob/master/to_print/autoref_Avdyushenko.pdf}{кандидатскую диссертацию <<Новые численные модели гидродинамики турбомашин>>}
-\end{itemize}
+	\item 2009 — 2015: научный сотрудник, \textbf{\href{http://www.ict.nsc.ru}{Институт вычислительных технологий СО РАН}}
+	\begin{itemize}
+		\item Разработал новую численную модель, учитывающую изменение во времени геометрии проточного тракта гидротурбины
+		\item Ускорил расчеты имеющимся в лаборатории комплексом программ на языке Fortran в 16 раз (MPI по блокам), и ещё в 7 раз (OpenMP-потоки внутри блока)
+		\item Защитил \href{https://github.com/avalur/dissertation/blob/master/to_print/autoref_Avdyushenko.pdf}{кандидатскую диссертацию <<Новые численные модели гидродинамики турбомашин>>}
+	\end{itemize}
 % 2008 — 2014 & {\href{http://sesc.nsu.ru}{Специализированный учебно-научный центр НГУ}, преподаватель математики}\\
 % 2006 — 2017 & {организатор и член Жюри математических олимпиад: Всероссийская, Всесибирская, Турнир городов}\\
 % 2010 — 2013 & {\href{https://www.sovenok.academy/}{мат. кружок Совёнок}, организатор и преподаватель}\\
@@ -75,8 +81,8 @@
 \begin{longtable} {p{0.5\textwidth}p{0.5\textwidth}}
 \vspace{-2.0em}
 \begin{itemize}
-	\item Python (numpy, scikit-learn, matplotlib)
-	\item Java (spring, hibernate), SQL
+	\item Python (numpy, scikit-learn, matplotlib), SQL
+	% \item Java (spring, hibernate)
 	\item linux, git, ipython notebook
 	\item MapReduce, MPI, OpenMP
 \end{itemize}
@@ -84,7 +90,7 @@
 \vspace{-2.0em}
 \begin{itemize}
 	\item machine learning (catboost, neural nets)
-	\item алгоритмы, структуры данных
+	% \item алгоритмы, структуры данных
 	\item математика (анализ, численные методы)
 	\item русский: родной, английский: продвинутый, французский: базовый
 \end{itemize}
@@ -112,8 +118,8 @@
 
 \vspace{-1.0em}
 
-\noindent {\textbf{Вне работы}}
+% \noindent {\textbf{Вне работы}}
 
-Люблю проводить время с женой и двумя дочками.
+% Люблю проводить время с женой и двумя дочками.
 
 \end{document}
