Minor improvements in skills

--- a/avalur_cv_en_one_page.tex
+++ b/avalur_cv_en_one_page.tex
@@ -90,17 +90,17 @@ Project Manager, Teacher and Data Scientist with 7+ years of experience in data 
 \begin{longtable} {p{0.5\textwidth}p{0.5\textwidth}}
 \vspace{-2em}
 \begin{itemize}
-	\item Python (numpy, scikit-learn, matplotlib)
-	\item Java (spring, hibernate), SQL
-	\item linux, git, ipython notebook
-	\item MapReduce, MPI, OpenMP
+	\item Python: numpy, pandas, scikit-learn
+	\item Machine Learning: catboost, neural nets
+	\item Math: analysis, numerical methods
+	\item Algorithms and data structures
 \end{itemize}
 &
 \vspace{-2em}
 \begin{itemize}
-	\item machine learning (catboost, neural nets)
-	\item algorithms, data structures
-	\item math: analysis, numerical methods
+	\item linux, git, jupyter notebook
+	\item Java (spring, hibernate), SQL
+	\item MapReduce, MPI, OpenMP
 	\item Russian: native, English: intermediate, French: beginner
 \end{itemize}
 \\
