Minor changes before printing

--- a/avalur_cv_en_one_page.tex
+++ b/avalur_cv_en_one_page.tex
@@ -27,7 +27,7 @@
 
 \vspace{0.5em}
 
-\noindent Saint-Petersburg, Russia $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} % \faMobile
+\noindent Saint Petersburg, Russia $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} % \faMobile
 $\bullet$~+7 913 718 53 78
 % \faSendO~ovalur
 \faGithub~\href{https://github.com/avalur}{avalur}
