Update since the beginning of 2023

--- a/avalur_cv_en_one_page.tex
+++ b/avalur_cv_en_one_page.tex
@@ -36,45 +36,49 @@ $\bullet$~+7 913 718 53 78
 \hrule
 \vspace{0.5em}
 
-Project Manager, Teacher and Data Scientist with 7+ years of experience in data science, analysis, and educational programs for the IT industry.
+Project Manager, Teacher and Data Scientist with 8+ years of experience in data science, analysis, and educational programs for the IT industry.
 
 \vspace{0.5em}
 \noindent {\textbf{Work experience}}
 \begin{itemize}
-	\item 2022 — present:
-	Head of ML programs, \textbf{\href{https://yandex.ru}{Yandex}}
+	\item 2023 — present: Lecturer and edu project manager, \textbf{\href{https://jetbrains.com}{JetBrains}}
+	\begin{itemize}
+		\item Launched new educational program \href{https://blog.jetbrains.com/education/2023/05/03/introducing-the-computer-science-and-artificial-intelligence-bachelor-s-program-with-neapolis-university-paphos/}{<<Computer Science and Artifitial Intelligence>>}
+	\end{itemize}
+	\item 2022 — 2023:
+	Head of ML programs, \textbf{\href{https://ya.ru/}{Yandex}}
 	\begin{itemize}
 		\item Organized one-year Machine Learning with modern approaches for 350+ participants in 2022-23
-		\item Enrolled 100+ talented students in three partner master's programs of Yandex 
+		\item Enrolled 100+ talented students in three partner master's programs of Yandex
 	\end{itemize}
 
- \item 2019 — present:
- Associate Professor and Head of the educational program in <<Data Science>>,  \textbf{\href{https://spbu.ru}{Saint Petersburg State University}, Department of Mathematics and Computer Science}
+ \item 2019 — 2023:
+ Associate Professor and Head of the educational program in <<Data Science>>,  \textbf{\href{https://english.spbu.ru/}{Saint Petersburg State University}, Department of Mathematics and Computer Science}
  \begin{itemize}
 	 \item Launched new educational program \href{https://maad.compscicenter.ru}{<<Data Science>>} in 2019, which immediately became popular among the best applicants in Russia, include winners of the International Olympiad in Mathematics (IMO)
-	 \item Created and teach \href{https://github.com/spbu-math-cs/ml-course/}{one-year machine learning course} with modern ML approaches. The average student's evaluation of teaching is 4,78 out of 5,0
+	 \item Created and taught \href{https://github.com/spbu-math-cs/ml-course/}{one-year machine learning course} with modern ML approaches. The average student's evaluation of teaching is 4,78 out of 5,0
 	 \item Developed with the group of students Python package for automatization of ML homeworks \href{https://github.com/avalur/mlpractice}{mlpractice}
-	 \item Created from scratch \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant) in 2020
+	 \item Created from scratch \href{https://gsom.spbu.ru/all_news/event2020-11-28/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant) in 2020
  \end{itemize}
 
   \item 2013 — 2022:
-	Academic Programs Manager, \textbf{\href{https://yandexdataschool.ru}{Yandex Data School}}
+	Academic Programs Manager, \textbf{\href{https://academy.yandex.ru/dataschool/}{Yandex Data School}}
 	\begin{itemize}
-		\item Launched a branch of \href{https://yandexdataschool.ru}{Yandex Data School} in Novosibirsk in 2013
+		\item Launched a branch of Yandex Data School in Novosibirsk in 2013
 		\item Expanded the Yandex Data School branch in cooperation with JetBrains to \href{https://compscicenter.ru}{Computer science center} in 2017
 		\item Organized open \href{https://habr.com/ru/company/JetBrains-education/blog/458042/}{Machine Learning training sessions} for Kaggle competition participants in 2019
 	\end{itemize}
 
   \item 2015 — 2018:
-	Data Scientist, \textbf{\href{https://yandex.ru/}{Yandex}}
+	Data Scientist, \textbf{\href{https://ya.ru/}{Yandex}}
 	\begin{itemize}
 		\item Increased the accuracy of the organizations database twice by 2\% and 3\% (the main goal of the team)
-		\item Automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}
+		\item Automated and optimized data update processes in call centers and in \href{https://toloka.ai/}{Toloka}
 		\item Worked in a group of six data scientists. We developed soft in Java, SQL, Python, a little bit of C++
 	\end{itemize}
 
   \item 2009 — 2015:
-	Researcher, \textbf{\href{http://www.ict.nsc.ru}{Institute of Computational Technologies SB RAS}}
+	Researcher, \textbf{\href{http://www.ict.nsc.ru/en}{Institute of Computational Technologies SB RAS}}
 	\begin{itemize}
 		\item Developed a new numerical model that takes into account the change in the geometry of the flow path over time
 		\item Accelerated calculations by the Fortran language software package available in the laboratory by 16 times (MPI per block), and another 7 times (OpenMP flows inside the block)
@@ -90,35 +94,35 @@ Project Manager, Teacher and Data Scientist with 7+ years of experience in data 
 \begin{longtable} {p{0.5\textwidth}p{0.5\textwidth}}
 \vspace{-2em}
 \begin{itemize}
-	\item Python: numpy, pandas, scikit-learn
-	\item Machine Learning: catboost, neural nets
+	\item Python: numpy, pandas, PyTorch
+	\item Deep learning
 	\item Math: analysis, numerical methods
-	\item Algorithms and data structures
+	% \item Algorithms and data structures
 \end{itemize}
 &
 \vspace{-2em}
 \begin{itemize}
-	\item linux, git, jupyter notebook
-	\item Java (spring, hibernate), SQL
+	\item linux, git, terminal, SQL
+	% \item Java (spring, hibernate)
 	\item MapReduce, MPI, OpenMP
-	\item Russian: native, English: intermediate, French: beginner
+	\item Russian: native, English: advanced
 \end{itemize}
 \\
 \end{longtable}
 
 \vspace{-1.5em}
-\noindent {\textbf{Education}
+\noindent {\textbf{Education}}
 \vspace{-0.5em}
 \begin{longtable} {p{0.3\textwidth}p{0.3\textwidth}l}
   Master degree in Math & \href{https://english.nsu.ru/}{Novosibirsk State University} &
 	 2009	\vspace{0.5em}\\
   PhD in Math modeling & \href{http://www.ict.nsc.ru/ru/education/postgraduate}{Graduate School of ICT SB RAS} & 2014 \vspace{0.5em}\\
-	\href{https://academy.yandex.ru/dataschool/life}{Graduate}, Machine learning & \href{https://yandexdataschool.ru}{Yandex Data School} & 2016 \vspace{0.5em}\\
+	\href{https://academy.yandex.ru/dataschool/graduates}{Graduate}, Machine learning & \href{https://academy.yandex.ru/dataschool/}{Yandex Data School} & 2016 \vspace{0.5em}\\
 \end{longtable}
-
-\noindent {\textbf{Professional development}
 \vspace{-0.5em}
-\begin{longtable} {p{0.35\textwidth}p{0.25\textwidth}ll}
+\noindent {\textbf{Professional development}}
+\vspace{-0.5em}
+\begin{longtable}{p{0.35\textwidth}p{0.25\textwidth}ll}
 Programming Languages, parts A, B, C &
 University of Washington & \href{https://coursera.org/share/3e187e640ed6df57b0a84ecb8a82ddab}{ Coursera certificate }& 2017 \vspace{0.5em}\\
 How to Win a Data Science Competition & HSE University & \href{https://coursera.org/share/0ad3f02a08a405800c29d5909caece90}{ Coursera certificate } & 2019 \vspace{0.5em}\\
