--- a/avalur_cv_one_page_2023.tex
+++ b/avalur_cv_one_page_2023.tex
@@ -7,7 +7,11 @@
 \usepackage[margin=0.5in]{geometry}
 \pagestyle{empty} % нумерация выкл.
 \addtolength{\textheight}{1.75in}
-\usepackage{hyperref}
+\usepackage[colorlinks = true,
+            linkcolor = blue,
+            urlcolor  = blue,
+            citecolor = blue,
+            anchorcolor = blue]{hyperref}
 \usepackage{longtable}
 \usepackage{color}
 \usepackage{setspace}
@@ -36,23 +40,24 @@
 \vspace{0.5em}
 \noindent {\textbf{Опыт работы}}
 \begin{itemize}
-	\item 2022 — н.в.:
+	\item 2022 — 2023:
 	Руководитель ML-программ, \textbf{\href{https://yandex.ru}{Яндекс}}
 	\begin{itemize}
 		\item Организовал годовой курс машинного обучения на 350+ студентов в 2022-23 гг.
 		\item Набрал 100+ талантливых студентов на три партнёрские магистратуры Яндекса
 	\end{itemize}
 
-	\item 2019 — н.в.: доцент и руководитель программы по анализу данных, \textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, Факультет математики и компьютерных наук}
+	\item 2019 — 2023: доцент и руководитель программы по анализу данных, \textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, Факультет математики и компьютерных наук}
 
 	\begin{itemize}
 		\item Запустил образовательную программу бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>} в 2019, сразу ставшую популярной среди лучших абитуриентов России
-		\item Создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ} в 2020
-		\item Разработал и читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс машинного обучения} по современным подходам в машинном обучении. Средняя студенческая оценка преподавания — 4,78 из 5,0
-		\item Организую ежегодную \href{https://sochisirius.ru/obuchenie/nauka/smena1078/5204}{смену в Сириусе} по математике и компьютерным наукам
+		\item Создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2020-11-28/}{Международный научно-методический центр СПбГУ} в 2020
+		\item Разработал и прочитал \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс машинного обучения} 
+		по современным подходам и моделям. Средняя студенческая оценка преподавания — 4,78 из 5,0
+		\item Организовывал ежегодную \href{https://sochisirius.ru/obuchenie/nauka/smena1078/5204}{смену в Сириусе} по математике и компьютерным наукам
 	\end{itemize}
 
-	\item 2013 — н.в.: куратор академических программ, \textbf{\href{https://compscicenter.ru}{Яндекс, CS center/Школа анализа данных}}
+	\item 2013 — 2023: куратор академических программ, \textbf{\href{https://compscicenter.ru}{Яндекс, CS center/Школа анализа данных}}
 	\begin{itemize}
 		\item запустил филиал ШАД в Новосибирске в 2013
 		\item в сотрудничестве с компанией Jetbrains расширил филиал ШАД до отделения \href{https://compscicenter.ru}{Computer science center} в 2017
@@ -81,17 +86,17 @@
 \begin{longtable} {p{0.5\textwidth}p{0.5\textwidth}}
 \vspace{-2.0em}
 \begin{itemize}
-	\item Python (numpy, scikit-learn, matplotlib), SQL
+	\item Python (numpy, pandas, PyTorch), SQL
 	% \item Java (spring, hibernate)
-	\item linux, git, ipython notebook
+	\item linux, git, terminal
 	\item MapReduce, MPI, OpenMP
 \end{itemize}
 &
 \vspace{-2.0em}
 \begin{itemize}
-	\item machine learning (catboost, neural nets)
+	\item deep learning
 	% \item алгоритмы, структуры данных
-	\item математика (анализ, численные методы)
+	\item математический анализ, численные методы
 	\item русский: родной, английский: продвинутый, французский: базовый
 \end{itemize}
 \\
@@ -103,7 +108,7 @@
 \begin{longtable} {p{0.3\textwidth}p{0.5\textwidth}l}
   магистр математики & \href{https://www.nsu.ru/}{Новосибирский государственный университет} & 2009 \vspace{0.5em} \\
 	к.ф.-м.н & \href{http://www.ict.nsc.ru/ru/education/postgraduate}{аспирантура ИВТ СО РАН} & 2014 \vspace{0.5em}\\
-  \href{https://academy.yandex.ru/dataschool/life}{выпускник} & \href{https://yandexdataschool.ru}{Школа анализа данных, Яндекс} & 2016 \vspace{0.5em}\\
+  \href{https://academy.yandex.ru/dataschool/graduates}{выпускник} & \href{https://yandexdataschool.ru}{Школа анализа данных, Яндекс} & 2016 \vspace{0.5em}\\
 \end{longtable}
 
 \vspace{-1.0em}
