--- a/avalur_cv_en_detailed.tex
+++ b/avalur_cv_en_detailed.tex
@@ -7,7 +7,11 @@
 \usepackage[margin=0.5in]{geometry}
 \pagestyle{empty} % нумерация выкл.
 \addtolength{\textheight}{1.75in}
-\usepackage{hyperref}
+\usepackage[colorlinks = true,
+            linkcolor = blue,
+            urlcolor  = blue,
+            citecolor = blue,
+            anchorcolor = blue]{hyperref}
 \usepackage{longtable}
 \usepackage{color}
 \usepackage{setspace}
@@ -28,20 +32,29 @@
 \hrule
 \vspace{0.5em}
 
-I have diverse experience in science, industry and organization of educational projects. I love machine learning and working with people.
+Project Manager, Teacher and Data Scientist with 8+ years of experience in data science, analysis, and educational programs for the IT industry.
 
 \vspace{0.5em}
 \noindent {\textbf{Work experience}}
 \begin{longtable} {l | p{0.85\textwidth}}
-
-2019 — present & {\textbf{\href{https://spbu.ru}{Saint Petersburg State University}, Department of Mathematics and Computer Science, Associate Professor and head of the educational program in <<Data Science>>}} \\
+2023 — present & {\textbf{\href{https://jetbrains.com}{JetBrains}, Lecturer and edu project manager}} \\
+& \vspace{-1.5em} 
+	\begin{itemize}
+		\item Launched new educational program \href{https://blog.jetbrains.com/education/2023/05/03/introducing-the-computer-science-and-artificial-intelligence-bachelor-s-program-with-neapolis-university-paphos/}{<<Computer Science and Artifitial Intelligence>>}
+	\end{itemize} \\
+2022 — 2023 & {\textbf{\href{https://ya.ru/}{Yandex}, Head of ML programs}} \\
+& \vspace{-1.5em}
+	\begin{itemize}
+		\item Organized one-year Machine Learning with modern approaches for 350+ participants in 2022-23
+		\item Enrolled 100+ talented students in three partner master's programs of Yandex
+	\end{itemize} \\
+2019 — 2023 & {\textbf{\href{https://english.spbu.ru/}{Saint Petersburg State University}, Associate Professor and head of the educational program in <<Data Science>>}} \\
 & \vspace{-1.5em}
 \begin{itemize}
-	\item 2019 — head of the new educational program for bachelor's degree \href{https://maad.compscicenter.ru}{<<Data Science>>}, created in cooperation with Yandex at the Mathematics and Computer Science department of St. Petersburg State University.
+\item 2019 — head of the new educational program for bachelor's degree \href{https://maad.compscicenter.ru}{<<Data Science>>}, created in cooperation with Yandex at the Mathematics and Computer Science department of St. Petersburg State University
 
   The program combines fundamental mathematics education with the study of modern programming and machine learning. Students are offered research topics related to the developments of leading companies in IT. It immediately became popular among motivated applicants: in 2019, the competition was about 25 persons per position, almost all budget positions were filled with winners of Olympiads in mathematics and computer science, including the final stage of the All-Russian Olympiad for schoolchildren and the International Olympiad in Mathematics (IMO).
-s
-  \item 2019-2020 — I created from scratch the \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant)
+\item 2019-2020 — I created from scratch the \href{https://gsom.spbu.ru/all_news/event2020-11-28/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant)
 
   In 2019-2020, I led the team of the Mathematics and Computer Science Department in a joint project with the Graduate School of Management of St. Petersburg State University of the International Scientific and Methodological Center of St. Petersburg State University (ISMC).
 
@@ -50,34 +63,31 @@ s
   In total, 123 persons were involved in the implementation of the project, including 61 Candidates of Sciences or PhD (50\%) and 24 Doctors of Sciences (20\%). The project team not only successfully coped with the challenges that arose in the context of the COVID-19 pandemic, quickly restructuring and fulfilling the planned, but also turned them to the benefit of the project, carrying out intensive training of scientific and pedagogical workers and graduate students of Russian educational organizations from all over the country.
 
   In 2020, within the framework of the ISMC, two advanced training programs, two internship programs, one professional retraining program and one school in mathematics and computer science were conducted for teachers at universities in the Russian Federation. In total, more than 1,500 persons from more than 50 cities and 60 universities in Russia were trained at the events of the ISMC. The events received a warm response from the community, and the graduates of the center are happy to use the acquired knowledge and methodological materials in their work.
-
-  \item 2020-2021 — co-director and teacher of the traditional \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{<<January Scientific School of Mathematics and Programming>> in Sirius}
-
-  \item 2021 — all budget positions of the Data Science program are filled with winners of All-Russian Olympiads, including two winners of the International Olympiad in Mathematics
-
-  \item 2021-2022 — I created and teach \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course} with modern ML approaches. The average student's evaluation of teaching is 4,78 out of 5,0
 \end{itemize} \\
+&
+\begin{itemize}
+	\item 2020-2021 — co-director and teacher of the traditional \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{<<January Scientific School of Mathematics and Programming>> in Sirius}
 
-\end{longtable}
-\newpage
-\begin{longtable} {l | p{0.85\textwidth}}
-
-2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Yandex}, data scientist}} \\
+	\item 2021 — all budget positions of the Data Science program are filled with winners of All-Russian Olympiads, including two winners of the International Olympiad in Mathematics
+	
+	\item 2021-2022 — I created and teach \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course} with modern ML approaches. The average student's evaluation of teaching is 4,78 out of 5,0
+\end{itemize} \\
+2015 — 2018 & {\textbf{\href{https://ya.ru/}{Yandex}, data scientist}} \\
 & \vspace{-1.5em} \begin{itemize}
 	\item I implemented a daily calculation of the attribute-metrics (existence, name, address, working time etc.) of accuracy of the Yandex organizations database
-	\item I automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}. In particular I improved the effectiveness of updating by 20\%, using catboost to predict the likelihood of closing an organization
+	\item I automated and optimized data update processes in call centers and in \href{https://toloka.ai/}{Toloka}. In particular I improved the effectiveness of updating by 20\%, using catboost to predict the likelihood of closing an organization
 	\item I increased the accuracy of the organizations database twice by 2\% and 3\%, highlighting the largest problems from the losses and correcting them. Firstly, fixed companies with inaccessible phones. Secondly, increased the accuracy of the time of work of organizations by their priority updating
 \end{itemize}
 \\
-2013 — present & {\textbf{\href{https://compscicenter.ru}{Yandex, CS center/Yandex Data School}, Academic Programs Manager}} \\
+2013 — 2022 & {\textbf{\href{https://academy.yandex.ru/dataschool/}{Yandex, CS center/Yandex Data School}, Academic Programs Manager}} \\
 & \vspace{-1.5em} \begin{itemize}
-	\item 2013 — I launched a branch \href{https://yandexdataschool.ru}{Yandex Data School} in Novosibirsk
+	\item 2013 — I launched a branch Yandex Data School in Novosibirsk
 	\item 2017 — in cooperation with JetBrains, I expanded the Yandex Data School branch to \href{https://compscicenter.ru}{Computer science center}
 	\item 2019 — co-leader and lecturer at \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Intensive project workshop for developers from Sirius, Yandex and the HSE CS>>}
 	\item 2019 — I organized open \href{https://habr.com/ru/company/JetBrains-education/blog/458042/}{Machine Learning training sessions} for Kaggle competition participants
 \end{itemize}
 \\
-2009 — 2015 & {\textbf{\href{http://www.ict.nsc.ru}{Institute of Computational Technologies SB RAS}, graduate student, researcher}}\\
+2009 — 2015 & {\textbf{\href{http://www.ict.nsc.ru/en}{Institute of Computational Technologies SB RAS}, graduate student, researcher}}\\
 & \vspace{-1.5em} \begin{itemize}
 	\item I generalized to non-stationary geometry the method of solving the three-dimensional Reynolds equations of motion of an incompressible fluid
 	\item I accelerated calculations by 16 times, parallelizing the algorithm across blocks of the computational domain using MPI for processes with distributed memory (improvement of the Fortran software package available in the laboratory, $\sim$ 30 thousand lines of code)
@@ -89,45 +99,43 @@ s
 2008 — 2014 & {\href{http://sesc.nsu.ru}{Specialized Educational and Scientific Center NSU}, math teacher}\\
 2006 — 2017 & {organizer and member of the Jury of Mathematical Olympiads: All-Russian, All-Siberian, Tournament of cities}\\
 2010 — 2013 & {\href{https://www.sovenok.academy/}{math club <<Sovenok>>}, organizer and teacher}\\
-
 \end{longtable}
 
+\newpage
 \noindent {\textbf{Skills}}
 \begin{longtable} {p{0.5\textwidth}p{0.5\textwidth}}
 \vspace{-2em}
 \begin{itemize}
-	\item Python (numpy, scikit-learn, matplotlib)
-	\item Java (spring, hibernate), SQL
-	\item linux, git, ipython notebook
+	\item Python: numpy, pandas, PyTorch
+	\item linux, git, terminal
 	\item MapReduce, MPI, OpenMP
+	\item Java (spring, hibernate), SQL
 \end{itemize}
 &
 \vspace{-2em}
 \begin{itemize}
-	\item machine learning (catboost, neural nets)
+	\item deep learning
 	\item algorithms, data structures
 	\item math: analysis, numerical methods
-	\item Russian: native, English: intermediate, French: débutant
+	\item Russian: native, English: advanced
 \end{itemize}
-\\
 \end{longtable}
 
-\newpage
-
-\noindent {\textbf{Education}
+\noindent {\textbf{Education}}
 \begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
-2013 — 2016	& \href{https://yandexdataschool.ru}{Yandex Data School} & machine learning, programming & \href{https://academy.yandex.ru/dataschool/life}{graduate} \vspace{0.25em}\\
+2013 — 2016	& \href{https://academy.yandex.ru/dataschool}{Yandex Data School} & machine learning, programming & \href{https://academy.yandex.ru/dataschool/graduates}{graduate} \vspace{0.25em}\\
 2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{Graduate School of ICT SB RAS} & math modeling, numerical methods & PhD \vspace{0.25em}\\
-2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department}{NSU, Department of Mechanics and Mathematics} & math & master \vspace{0.25em}\\
+2003 — 2009	& \href{https://english.nsu.ru/}{NSU, Department of Mechanics and Mathematics} & math & master \vspace{0.25em}\\
 \end{longtable}
 
-\noindent {\textbf{Online courses}
-\begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
-2017 & Coursera, University of Washington & Programming Languages, parts A, B, C & 	certificate \vspace{0.5em}\\
-2019 & Coursera, HSE University & How to Win a Data Science Competition: Learn from Top Kagglers & certificate \vspace{0.5em}\\
+\noindent {\textbf{Professional development}}
+\begin{longtable}{p{0.35\textwidth}p{0.25\textwidth}ll}
+	Programming Languages, parts A, B, C &
+	University of Washington & \href{https://coursera.org/share/3e187e640ed6df57b0a84ecb8a82ddab}{ Coursera certificate }& 2017 \vspace{0.5em}\\
+	How to Win a Data Science Competition & HSE University & \href{https://coursera.org/share/0ad3f02a08a405800c29d5909caece90}{ Coursera certificate } & 2019 \vspace{0.5em}\\
 \end{longtable}
-
-\vspace{-2em}
+	
+\vspace{-1em}
 \noindent{\textbf{Out of work}}
 
 I like to spend time with my wife and two daughters.
