Also change city to Paphos

--- a/avalur_cv_en_detailed.tex
+++ b/avalur_cv_en_detailed.tex
@@ -25,8 +25,9 @@
 
 \vspace{0.5em}
 
-\noindent Saint-Petersburg, Russia $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} \faMobile~+7 913 718 53 78 \faSendO~ovalur
-\faGithub~avalur
+\noindent Paphos, Cyprus $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} \faSendO~ovalur
+\faGithub~\href{https://github.com/avalur}{avalur}
+% \faMobile~+7 913 718 53 78
 
 \vspace{0.5em}
 \hrule
