--- a/avalur_cv_en_one_page.tex
+++ b/avalur_cv_en_one_page.tex
@@ -27,9 +27,7 @@
 
 \vspace{0.5em}
 
-\noindent Saint Petersburg, Russia $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} % \faMobile
-$\bullet$~+7 913 718 53 78
-% \faSendO~ovalur
+\noindent Paphos, Cyprus $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} \faSendO~ovalur
 \faGithub~\href{https://github.com/avalur}{avalur}
 
 \vspace{0.5em}
