Insert word course

--- a/avalur_cv_en_detailed.tex
+++ b/avalur_cv_en_detailed.tex
@@ -46,8 +46,8 @@ Project Manager, Teacher and Data Scientist with 8+ years of experience in data 
 2022 — 2023 & {\textbf{\href{https://ya.ru/}{Yandex}, Head of ML programs}} \\
 & \vspace{-1.5em}
 	\begin{itemize}
-		\item Organized one-year Machine Learning with modern approaches for 350+ participants in 2022-23
 		\item Enrolled 100+ talented students in three partner master's programs of Yandex
+		\item Organized one-year Machine Learning course with modern approaches for 350+ participants in 2022-23
 	\end{itemize} \\
 2019 — 2023 & {\textbf{\href{https://english.spbu.ru/}{Saint Petersburg State University}, Associate Professor and head of the educational program in <<Data Science>>}} \\
 & \vspace{-1.5em}
