--- a/avalur_cv_en_one_page.tex
+++ b/avalur_cv_en_one_page.tex
@@ -46,8 +46,8 @@ Project Manager, Teacher and Data Scientist with 8+ years of experience in data 
 	\item 2022 — 2023:
 	Head of ML programs, \textbf{\href{https://ya.ru/}{Yandex}}
 	\begin{itemize}
-		\item Organized one-year Machine Learning with modern approaches for 350+ participants in 2022-23
 		\item Enrolled 100+ talented students in three partner master's programs of Yandex
+		\item Organized one-year Machine Learning course with modern approaches for 350+ participants in 2022-23
 	\end{itemize}
 
  \item 2019 — 2023:
