Update info and remove 2023.pdf
Deleted the outdated and unnecessary detailed CV PDF file to clean up the repository.

--- a/avalur_cv_en_detailed.tex
+++ b/avalur_cv_en_detailed.tex
@@ -33,14 +33,16 @@
 \hrule
 \vspace{0.5em}
 
-Project Manager, Teacher and Data Scientist with 8+ years of experience in data science, analysis, and educational programs for the IT industry.
+Lecturer, Researcher and Data Scientist with 8+ years of experience in data science,
+analysis, and educational programs for the IT industry.
 
 \vspace{0.5em}
 \noindent {\textbf{Work experience}}
 \begin{longtable} {l | p{0.85\textwidth}}
-2023 — present & {\textbf{\href{https://jetbrains.com}{JetBrains}, Lecturer and edu project manager}} \\
+2023 — present & {\textbf{\href{https://jetbrains.com}{JetBrains}, Lecturer and Researcher}} \\
 & \vspace{-1.5em} 
 	\begin{itemize}
+		\item Taught one-year Machine Learning course with modern approaches for 100+ students in 2023-24
 		\item Launched new educational program \href{https://blog.jetbrains.com/education/2023/05/03/introducing-the-computer-science-and-artificial-intelligence-bachelor-s-program-with-neapolis-university-paphos/}{<<Computer Science and Artifitial Intelligence>>}
 	\end{itemize} \\
 2022 — 2023 & {\textbf{\href{https://ya.ru/}{Yandex}, Head of ML programs}} \\
@@ -63,7 +65,13 @@ Project Manager, Teacher and Data Scientist with 8+ years of experience in data 
 
   In total, 123 persons were involved in the implementation of the project, including 61 Candidates of Sciences or PhD (50\%) and 24 Doctors of Sciences (20\%). The project team not only successfully coped with the challenges that arose in the context of the COVID-19 pandemic, quickly restructuring and fulfilling the planned, but also turned them to the benefit of the project, carrying out intensive training of scientific and pedagogical workers and graduate students of Russian educational organizations from all over the country.
 
-  In 2020, within the framework of the ISMC, two advanced training programs, two internship programs, one professional retraining program and one school in mathematics and computer science were conducted for teachers at universities in the Russian Federation. In total, more than 1,500 persons from more than 50 cities and 60 universities in Russia were trained at the events of the ISMC. The events received a warm response from the community, and the graduates of the center are happy to use the acquired knowledge and methodological materials in their work.
+  In 2020, within the framework of the ISMC, two advanced training programs,
+  two internship programs, one professional retraining program and one school
+  in mathematics and computer science were conducted for teachers at universities
+  in the Russian Federation. In total, more than 1,500 persons from more than
+  50 cities and 60 universities in Russia were trained at the events of the ISMC.
+  The graduates of the center are happy to use the acquired knowledge
+  and methodological materials in their work.
 \end{itemize} \\
 &
 \begin{itemize}
