--- a/avalur_cv_en_one_page.tex
+++ b/avalur_cv_en_one_page.tex
@@ -34,12 +34,13 @@
 \hrule
 \vspace{0.5em}
 
-Project Manager, Teacher and Data Scientist with 8+ years of experience in data science, analysis, and educational programs for the IT industry.
+Lecturer, Researcher and Data Scientist with 8+ years of experience in data science,
+analysis, and educational programs for the IT industry.
 
 \vspace{0.5em}
 \noindent {\textbf{Work experience}}
 \begin{itemize}
-	\item 2023 — present: Lecturer and edu project manager, \textbf{\href{https://jetbrains.com}{JetBrains}}
+	\item 2023 — present: Lecturer and Researcher, \textbf{\href{https://jetbrains.com}{JetBrains}}
 	\begin{itemize}
 		\item Launched new educational program \href{https://blog.jetbrains.com/education/2023/05/03/introducing-the-computer-science-and-artificial-intelligence-bachelor-s-program-with-neapolis-university-paphos/}{<<Computer Science and Artifitial Intelligence>>}
 	\end{itemize}
